--- a/hamsa/index.html
+++ b/hamsa/index.html
@@ -101,11 +101,9 @@
                                 </div>
                              </div>
                         </div>
-                    </div>
 
-                    <div class="row">
                         <div class="col-1-of-2">
-                            <div class="portfolio">
+                            <div class="portfolio u-relative">
                                 <div class="wrap-text-portfolio">
                                     <h3 class="portfolio-text">
                                         <span class=" portfolio-text--sub">Don’t just</span>
@@ -118,6 +116,7 @@
                                         <span class=" portfolio-text--main">attitude</span>
                                     </h3>
                                 </div>
+                                <img src="img/Back-shot_700x.jpg" alt="" class="black-shot">
                             </div>
                         </div>
                         <div class="col-1-of-2">
@@ -125,6 +124,10 @@
                                 <img src="img/Back-shot_700x.jpg" alt="" class="black-shot">
                             </div>
                         </div>
+                    </div>
+
+                    <div class="row">
+                      
                     </div>
                 </div>
            </div>
