--- a/CV/index.html
+++ b/CV/index.html
@@ -90,14 +90,14 @@
                             <!-- introduct -->
                             <div class="section-about__introduct">
                                 <h2 class="heading-secondary u-margin-bottom-4">ABOUT ME</h2>
-                                <h3 class="heading-tertiary u-margin-bottom-1">Helo, I’m Xuan Tung</h3>
+                                <h3 class="heading-tertiary u-margin-bottom-1">Xin chào, tôi tên là Lê Xuân Tùng</h3>
                                 <p class="paragraph">
-                                    I am talanted florist and decorator. I have graduated from International and
-                                    cultural university of design and arts. Since first year in high school I relized
-                                    that nature is most powerfull and beautiful gift in the world. I was captivated by
-                                    beauty and simplicity of flowers and trees. Since then I have started to create and
-                                    mastering unique and nice bouquets. My 1st masterpiece was garden of ant Ula Lowe
-                                    decorated by me
+                                    Tôi đã tốt nghiệp ngành hệ thống thông tin của trường Đại học Thương Mại. Sau khi tốt nghiệp tôi đã công tác tại Hà Nội với công việc 
+                                    Nhân viên triển khai phần mềm. Với 2 năm kinh nghiệm làm việc, tôi có hiểu biết về trải nghiệm người dùng các website, phần mềm nền tảng 
+                                    web-base. Trong quá trình công tác tôi tình cờ biết tới lập trình Front-End, công việc đồi hỏi cả khả năng tư duy, sáng tạo và thẩm mỹ.
+                                    Tôi rất hứng thú với công việc này vì vậy tôi đã quyết định theo đuổi nó, với khả năng chăm chỉ, tự lập và học hỏi. Tôi đã có nền tảng cơ 
+                                    bản về HTML/CSS/Javscript và một số công cụ khác. Tôi mong muốn nhận được cơ hội từ các quý công ty để có thể tham gia thực tế các dự án,
+                                    ngoài việc đem lại lợi ích cho công ty, tôi cũng sẽ có cơ hội học hỏi vào trau dồi kiến thức.
                                 </p>
                             </div>
                             <!-- infomation -->
@@ -353,7 +353,7 @@
                                                         <div class="portfolio__img">
                                                             <img src="img/portfolio-4.jpg" alt="">
                                                             <div class="overlay"></div>
-                                                            <a class="portfolio__text" href="https://fox19960910.github.io/pofoCreative/nartouris/index.html" target="_blank">PREVIEW</a>
+                                                            <a class="portfolio__text" href="https://fox19960910.github.io/pofoCreative/natouris/index.html" target="_blank">PREVIEW</a>
                                                         </div>
                                                     </div>
                                                 </div>
