--- a/HUC/index.html
+++ b/HUC/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu+2:400,500,700|Dancing+Script:400,500,600,700|Srisakdi:400,700&display=swap&subset=vietnamese" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700|Dancing+Script:400,500,600,700|Srisakdi:400,700&display=swap&subset=vietnamese" rel="stylesheet">
     <!-- font-awsome 4.7 cdn -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
      <!-- favicon -->
@@ -203,14 +203,14 @@
                        <p class="paragraph u-margin-bottom-2">
                         Trường Đại học Văn hóa Hà Nội thành lập ngày 26 tháng 3 năm 1959, trụ sở chính của Trường được đặt tại quận Đống Đa, thành phố Hà Nội, Trường trực thuộc Bộ Văn hóa, Thể thao và Du lịch, do Bộ Giáo dục và Đào tạo quản lý về đào tạo
                        </p>
-                       <a href="#" class="btn-square">Xem thêm<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                       <a href="aboutus.html" target="_blank" class="btn-square">Xem thêm<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
                    </div>
 
                    <div class="col-1-of-2">
                        <div class="composition">
                            <img src="img/article-1.jpg" alt="" class="composition__img composition__img--1">
-                           <img src="img/article-2.jpg" alt="" class="composition__img composition__img--2">
-                           <img src="img/article-3.jpg" alt="" class="composition__img composition__img--3">
+                           <img src="img/article-3.jpg" alt="" class="composition__img composition__img--2">
+                           <img src="img/article-8.jpg" alt="" class="composition__img composition__img--3">
                        </div>
                    </div>
                </div>
@@ -234,10 +234,10 @@
                         </div>
                         <div class="article__content">
                             <h3 class="heading-tertiary u-margin-bottom-1">
-                                <a class="heading-tertiary heading-tertiary--main" href="">Đại học Văn hóa Hà Nội ra
-                                    mắt MV “Tế Covid”</a>
+                                <a class="article__title heading-tertiary heading-tertiary--main" href="">Đại học Văn hóa Hà Nội ra
+                                    mắt MV “Tế Covid”: Khát khao chiến thắng dịch bệnh</a>
                             </h3>
-                            <p class="paragraph u-margin-bottom-2">
+                            <p class="article__description paragraph u-margin-bottom-2">
                                 Sau những ca khúc hit hot ra đời trong bối cảnh dịch bệnh Covid-19 hoành hành như
                                 Ghen Cô Vy, Việt Nam ơi! Đánh bay Covid!, Bao la những trái tim hồng
                             </p>
@@ -249,16 +249,14 @@
                 <div class="col-1-of-3">
                     <article class="article">
                         <div class="article__img u-margin-bottom-2">
-                            <img src="img/article-1.jpg" alt="">
+                            <img src="img/article-9.jpg" alt="">
                         </div>
                         <div class="article__content">
                             <h3 class="heading-tertiary u-margin-bottom-1">
-                                <a class="heading-tertiary heading-tertiary--main" href="">Đại học Văn hóa Hà Nội ra
-                                    mắt MV “Tế Covid”</a>
+                                <a class="article__title heading-tertiary heading-tertiary--main" href="">Trường Đại học Văn hóa Hà Nội trao bằng cho 08 Tiến sĩ và 133 Thạc sĩ</a>
                             </h3>
-                            <p class="paragraph u-margin-bottom-2">
-                                Sau những ca khúc hit hot ra đời trong bối cảnh dịch bệnh Covid-19 hoành hành như
-                                Ghen Cô Vy, Việt Nam ơi! Đánh bay Covid!, Bao la những trái tim hồng
+                            <p class="article__description paragraph u-margin-bottom-2">
+                                (ĐH VHHN) - Ngày 30/08/2019, Trường Đại học Văn hóa Hà Nội đã long trọng tổ chức Lễ bế giảng và trao bằng tốt nghiệp các lớp Cao học và Nghiên cứu sinh đợt 1 năm 2019.
                             </p>
                             <a class="btn-more article__more u-text-right u-margin-bottom-3" href="#">Xem them</a>
                             <p class="paragraph--tiny article__date">20/4/2020</p>
@@ -268,15 +266,14 @@
                 <div class="col-1-of-3">
                     <article class="article">
                         <div class="article__img u-margin-bottom-2">
-                            <img src="img/article-2.jpg" alt="">
+                            <img src="img/article-7.jpg" alt="">
                         </div>
                         <div class="article__content">
                             <h3 class="heading-tertiary u-margin-bottom-1">
-                                <a class="heading-tertiary heading-tertiary--main" href="">Đại học Văn hóa Hà Nội ra
-                                    mắt MV “Tế Covid”</a>
+                                <a class="article__title heading-tertiary heading-tertiary--main" href="">Ban Giám hiệu Nhà trường chúc Tết cán bộ, viên chức và cán bộ hưu trí</a>
                             </h3>
-                            <p class="paragraph u-margin-bottom-2">
-                                Sau những ca khúc hit hot ra đời trong bối cảnh dịch bệnh Covid-19 hoành hành như
+                            <p class="article__description paragraph u-margin-bottom-2">
+                                ĐH VHHN) – Nhân dịp xuân Canh Tý 2020 đang đến gần, sáng ngày 16/01/2020, tại Nhà văn hóa, Trường Đại học Văn hóa Hà Nội đã tổ chức buổi gặp mặt cuối năm.h như
                                 Ghen Cô Vy, Việt Nam ơi! Đánh bay Covid!, Bao la những trái tim hồng
                             </p>
                             <a class="btn-more article__more u-text-right u-margin-bottom-3" href="#">Xem them</a>
@@ -309,12 +306,12 @@
                                 </li>
                                 <li class="timeline__item">
                                     <span class="timeline__label">Tốt nghiệp</span>
-                                    <a href="" class="timeline__title">Thông báo danh sách tốt nghiệp khoá K50</a>
+                                    <a href="" class="timeline__title">Thông báo danh sách tốt nghiệp khoá K52</a>
                                     <span class="timeline__date">22/04/2020</span>
                                 </li>
                                 <li class="timeline__item">
                                     <span class="timeline__label">Tốt nghiệp</span>
-                                    <a href="" class="timeline__title">Thông báo danh sách tốt nghiệp khoá K50</a>
+                                    <a href="" class="timeline__title">Thông báo danh sách được xét tốt nghiệp trong kì I 2020</a>
                                     <span class="timeline__date">22/04/2020</span>
                                 </li>
                                 <li class="timeline__item">
@@ -329,7 +326,7 @@
                                 </li>
                             </ul>
                             <div class="u-flex u-justify-content-end u-margin-top-2">
-                                <a href="#" class="btn-square">MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                                <a href="#" class="btn-square">Xem thêm <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
                             </div>
                         </div>
                    </div>
@@ -398,25 +395,25 @@
                                 <img src="img/partner-2.png" alt="">
                             </li>
                             <li class="partner__item">
-                                <img src="img/partner-1.png" alt="">
+                                <img src="img/dantri-logo.png" alt="">
                             </li>
                             <li class="partner__item">
-                                <img src="img/partner-2.png" alt="">
+                                <img src="img/vnexpress-logo.png" alt="">
+                            </li> <li class="partner__item">
+                                <img src="img/kenh14-logo.png" alt="">
+                            </li>
+                            <li class="partner__item">
+                                <img src="img/techcombank-logo.png" alt="">
+                            </li> <li class="partner__item">
+                                <img src="img/fire-load.png" alt="">
+                            </li>
+                            <li class="partner__item">
+                                <img src="img/cultural-logo.png" alt="">
                             </li> <li class="partner__item">
                                 <img src="img/partner-1.png" alt="">
                             </li>
                             <li class="partner__item">
-                                <img src="img/partner-2.png" alt="">
-                            </li> <li class="partner__item">
-                                <img src="img/partner-1.png" alt="">
-                            </li>
-                            <li class="partner__item">
-                                <img src="img/partner-2.png" alt="">
-                            </li> <li class="partner__item">
-                                <img src="img/partner-1.png" alt="">
-                            </li>
-                            <li class="partner__item">
-                                <img src="img/partner-2.png" alt="">
+                                <img src="img/google-logo.png" alt="">
                             </li>
                         </ul>
                     </div>
