--- a/HUC/news.html
+++ b/HUC/news.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu+2:400,500,700|Dancing+Script:400,500,600,700|Srisakdi:400,700&display=swap&subset=vietnamese" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700|Dancing+Script:400,500,600,700|Srisakdi:400,700&display=swap&subset=vietnamese" rel="stylesheet">
     <!-- font-awsome 4.7 cdn -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
      <!-- favicon -->
@@ -213,9 +213,9 @@
                         </h3>
                         <div class="head-content__side">
                             <div class="box-news">
-                                <div class="box-news__img"><img src="img/article-2.jpg" alt=""></div>
+                                <div class="box-news__img"><img src="img/article-6.jpeg" alt=""></div>
                                 <div class="box-news__content">
-                                    <p class="paragraph"> bai dang - 5 ngay truoc</p>
+                                    <p class="paragraph"> Bài đăng - 3 ngày trước</p>
                                     <h3 class="heading-tertiary u-margin-bottom-1">
                                         <a class="heading-tertiary heading-tertiary--main" href="">Nhà soạn nhạc Ba Lan
                                             lừng danh thế giới Krzysztof Penderecki đã từ trần</a>
@@ -225,21 +225,19 @@
                             <div class="box-news">
                                 <div class="box-news__img"><img src="img/article-2.jpg" alt=""></div>
                                 <div class="box-news__content">
-                                    <p class="paragraph"> bai dang - 5 ngay truoc</p>
+                                    <p class="paragraph"> Bài đăng - 5 ngày trước</p>
                                     <h3 class="heading-tertiary u-margin-bottom-1">
-                                        <a class="heading-tertiary heading-tertiary--main" href="">Nhà soạn nhạc Ba
-                                            Lan lừng danh thế giới Krzysztof Penderecki đã từ trần</a>
+                                        <a class="heading-tertiary heading-tertiary--main" href="">Tọa đàm Doanh nghiệp - Doanh nhân trực tuyến: “Quản trị khủng hoảng doanh nghiệp du lịch mùa dịch Covid-19”</a>
                                     </h3>
                                 </div>
                             </div>
 
                             <div class="box-news">
-                                <div class="box-news__img"><img src="img/article-2.jpg" alt=""></div>
+                                <div class="box-news__img"><img src="img/article-7.jpg" alt=""></div>
                                 <div class="box-news__content">
-                                    <p class="paragraph"> bai dang - 5 ngay truoc</p>
+                                    <p class="paragraph"> Bài đăng - 7 ngày trước</p>
                                     <h3 class="heading-tertiary u-margin-bottom-1">
-                                        <a class="heading-tertiary heading-tertiary--main" href="">Nhà soạn nhạc Ba
-                                            Lan lừng danh thế giới Krzysztof Penderecki đã từ trần</a>
+                                        <a class="heading-tertiary heading-tertiary--main" href="">Trường Đại học Văn hóa Hà Nội tổ chức tập huấn giảng dạy trực tuyến</a>
                                     </h3>
                                 </div>
                             </div>
@@ -266,10 +264,10 @@
                             </div>
                             <div class="article__content">
                                 <h3 class="heading-tertiary u-margin-bottom-1">
-                                    <a class="heading-tertiary heading-tertiary--main" href="">Đại học Văn hóa Hà Nội ra
+                                    <a class="article__title heading-tertiary heading-tertiary--main" href="">Đại học Văn hóa Hà Nội ra
                                         mắt MV “Tế Covid”: Khát khao chiến thắng dịch bệnh</a>
                                 </h3>
-                                <p class="paragraph u-margin-bottom-2">
+                                <p class="article__description paragraph u-margin-bottom-2">
                                     Sau những ca khúc hit hot ra đời trong bối cảnh dịch bệnh Covid-19 hoành hành như
                                     Ghen Cô Vy, Việt Nam ơi! Đánh bay Covid!, Bao la những trái tim hồng
                                 </p>
@@ -281,16 +279,14 @@
                     <div class="col-1-of-3">
                         <article class="article">
                             <div class="article__img u-margin-bottom-2">
-                                <img src="img/article-3.jpg" alt="">
+                                <img src="img/article-9.jpg" alt="">
                             </div>
                             <div class="article__content">
                                 <h3 class="heading-tertiary u-margin-bottom-1">
-                                    <a class="heading-tertiary heading-tertiary--main" href="">Đại học Văn hóa Hà Nội ra
-                                        mắt MV “Tế Covid”: Khát khao chiến thắng dịch bệnh</a>
+                                    <a class="article__title heading-tertiary heading-tertiary--main" href="">Trường Đại học Văn hóa Hà Nội trao bằng cho 08 Tiến sĩ và 133 Thạc sĩ</a>
                                 </h3>
-                                <p class="paragraph u-margin-bottom-2">
-                                    Sau những ca khúc hit hot ra đời trong bối cảnh dịch bệnh Covid-19 hoành hành như
-                                    Ghen Cô Vy, Việt Nam ơi! Đánh bay Covid!, Bao la những trái tim hồng
+                                <p class="article__description paragraph u-margin-bottom-2">
+                                    (ĐH VHHN) - Ngày 30/08/2019, Trường Đại học Văn hóa Hà Nội đã long trọng tổ chức Lễ bế giảng và trao bằng tốt nghiệp các lớp Cao học và Nghiên cứu sinh đợt 1 năm 2019.
                                 </p>
                                 <a class="btn-more article__more u-text-right u-margin-bottom-3" href="#">Xem them</a>
                                 <p class="paragraph--tiny article__date">20/4/2020</p>
@@ -300,15 +296,14 @@
                     <div class="col-1-of-3">
                         <article class="article">
                             <div class="article__img u-margin-bottom-2">
-                                <img src="img/article-3.jpg" alt="">
+                                <img src="img/article-7.jpg" alt="">
                             </div>
                             <div class="article__content">
                                 <h3 class="heading-tertiary u-margin-bottom-1">
-                                    <a class="heading-tertiary heading-tertiary--main" href="">Đại học Văn hóa Hà Nội ra
-                                        mắt MV “Tế Covid”: Khát khao chiến thắng dịch bệnh</a>
+                                    <a class="article__title heading-tertiary heading-tertiary--main" href="">Ban Giám hiệu Nhà trường chúc Tết cán bộ, viên chức và cán bộ hưu trí</a>
                                 </h3>
-                                <p class="paragraph u-margin-bottom-2">
-                                    Sau những ca khúc hit hot ra đời trong bối cảnh dịch bệnh Covid-19 hoành hành như
+                                <p class="article__description paragraph u-margin-bottom-2">
+                                    ĐH VHHN) – Nhân dịp xuân Canh Tý 2020 đang đến gần, sáng ngày 16/01/2020, tại Nhà văn hóa, Trường Đại học Văn hóa Hà Nội đã tổ chức buổi gặp mặt cuối năm.h như
                                     Ghen Cô Vy, Việt Nam ơi! Đánh bay Covid!, Bao la những trái tim hồng
                                 </p>
                                 <a class="btn-more article__more u-text-right u-margin-bottom-3" href="#">Xem them</a>
@@ -341,9 +336,7 @@
                                     <div class="article-small__content">
                                         <p class="article-small__catalog">The gioi</p>
                                         <h3 class="heading-tertiary u-margin-bottom-1">
-                                            <a class="heading-tertiary heading-tertiary--main" href="">Đại học Văn hóa
-                                                Hà Nội ra
-                                                mắt MV “Tế Covid”: Khát khao chiến thắng dịch bệnh</a>
+                                            <a class="heading-tertiary heading-tertiary--main" href=""> HƯỚNG DẪN ĐĂNG KÝ, CÀI ĐẶT, ĐĂNG NHẬP VÀ VÀO LỚP HỌC TRÊN NỀN TÀNG MICROSOFT OFFICE 365</a>
                                         </h3>
                                         <ul class="article__list">
                                             <li class="article__item article__author">by <strong>Le Xuan Tung</strong>
@@ -355,10 +348,8 @@
                                                 <i class="fa fa-eye" aria-hidden="true"></i>1000+ views
                                             </li>
                                         </ul>
-                                        <p class="paragraph u-margin-bottom-2">
-                                            Sau những ca khúc hit hot ra đời trong bối cảnh dịch bệnh Covid-19 hoành
-                                            hành như
-                                            Ghen Cô Vy, Việt Nam ơi! Đánh bay Covid!, Bao la những trái tim hồng
+                                        <p class="article-small__description paragraph u-margin-bottom-2">
+                                            (ĐH VHHN) - Trường Đại học Văn hóa Hà Nội vừa triển khai tập huấn sử dụng phần mềm giảng dạy trực tuyến. Các thầy/cô và các em sinh viên xem kỹ hướng dẫn dưới đây để nắm vững các thao tác đăng ký, đăng nhập và vào lớp học để công tác giảng dạy và học tập online diễn ra hiệu quả.
                                         </p>
                                         <a class="btn-more article__more u-text-right u-margin-bottom-3" href="#">Xem
                                             them</a>
@@ -374,9 +365,7 @@
                                     <div class="article-small__content">
                                         <p class="article-small__catalog">am nhac</p>
                                         <h3 class="heading-tertiary u-margin-bottom-1">
-                                            <a class="heading-tertiary heading-tertiary--main" href="">Đại học Văn hóa
-                                                Hà Nội ra
-                                                mắt MV “Tế Covid”: Khát khao chiến thắng dịch bệnh</a>
+                                            <a class="heading-tertiary heading-tertiary--main" href="">Tọa đàm Doanh nghiệp - Doanh nhân trực tuyến: “Quản trị khủng hoảng doanh nghiệp du lịch mùa dịch Covid-19”</a>
                                         </h3>
                                         <ul class="article__list">
                                             <li class="article__item article__author">by <strong>Le Xuan Tung</strong>
@@ -388,10 +377,8 @@
                                                 <i class="fa fa-eye" aria-hidden="true"></i>1000+ views
                                             </li>
                                         </ul>
-                                        <p class="paragraph u-margin-bottom-2">
-                                            Sau những ca khúc hit hot ra đời trong bối cảnh dịch bệnh Covid-19 hoành
-                                            hành như
-                                            Ghen Cô Vy, Việt Nam ơi! Đánh bay Covid!, Bao la những trái tim hồng
+                                        <p class=" article-small__description paragraph u-margin-bottom-2">
+                                            Để theo kịp với diễn biến “nóng-lạnh” của thị trường du lịch do tác động của dịch Covid-19, cập nhật tình hình cụ thể, thực tế của các doanh nghiệp du lịch Việt Nam hiện nay và có thể
                                         </p>
                                         <a class="btn-more article__more u-text-right u-margin-bottom-3" href="#">Xem
                                             them</a>
@@ -421,7 +408,7 @@
                                                 <i class="fa fa-eye" aria-hidden="true"></i>1000+ views
                                             </li>
                                         </ul>
-                                        <p class="paragraph u-margin-bottom-2">
+                                        <p class=" article-small__description paragraph u-margin-bottom-2">
                                             Sau những ca khúc hit hot ra đời trong bối cảnh dịch bệnh Covid-19 hoành
                                             hành như
                                             Ghen Cô Vy, Việt Nam ơi! Đánh bay Covid!, Bao la những trái tim hồng
@@ -454,7 +441,7 @@
                                                 <i class="fa fa-eye" aria-hidden="true"></i>1000+ views
                                             </li>
                                         </ul>
-                                        <p class="paragraph u-margin-bottom-2">
+                                        <p class=" article-small__description paragraph u-margin-bottom-2">
                                             Sau những ca khúc hit hot ra đời trong bối cảnh dịch bệnh Covid-19 hoành
                                             hành như
                                             Ghen Cô Vy, Việt Nam ơi! Đánh bay Covid!, Bao la những trái tim hồng
@@ -841,6 +828,7 @@
             </nav>
         </div>
     </footer>
+    <script src="js/news.js"></script>
     <script src="js/script.js"></script>
 </body>
 
