--- a/HUC/signUp.html
+++ b/HUC/signUp.html
@@ -10,9 +10,7 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css?family=Baloo+Tammudu+2:400,500,700|Dancing+Script:400,500,600,700|Srisakdi:400,700&display=swap&subset=vietnamese"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700|Dancing+Script:400,500,600,700|Srisakdi:400,700&display=swap&subset=vietnamese" rel="stylesheet">
     <!-- font-awsome 4.7 cdn -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- favicon -->
