--- a/HUC/aboutus.html
+++ b/HUC/aboutus.html
@@ -172,6 +172,9 @@
             </div>
             <!-- navigation responsive -->
             <nav class="nav-responsive">
+                <div class="sign-in__close nav-close">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </div>
                 <ul class="nav-responsive__list">
                     <li class="nav-responsive__item"><a href="index.html" target="_blank"
                             class="nav-responsive__link ">Trang chủ</a></li>
@@ -337,7 +340,7 @@
         </section>
         <!-- about contact -->
         <section class="about-contact">
-            <div class="container-full">
+            <div class="container">
                 <div class="u-flex u-justify-content-center u-align-item-center u-margin-bottom-3">
                     <h2 class="heading-intro">Gửi thư góp ý</h2>
                 </div>
