--- a/HUC/contact.html
+++ b/HUC/contact.html
@@ -169,6 +169,9 @@
             </div>
             <!-- navigation responsive -->
             <nav class="nav-responsive">
+                <div class="sign-in__close nav-close">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </div>
                 <ul class="nav-responsive__list">
                     <li class="nav-responsive__item"><a href="index.html" target="_blank" class="nav-responsive__link ">Trang chủ</a></li>
                     <li class="nav-responsive__item"><a href="aboutus.html" target="_blank" class="nav-responsive__link">Giới thiệu</a></li>                           
